fix hero countdown overlap issue

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -167,6 +167,7 @@ main .hero-container .hero-wrapper {
 .hero.countdown .hero-text-wrapper {
   font-size: 24px;
   line-height: 33.6px;
+  gap: 125px;
 }
 
 .hero .hero-countdown .hero-days-label,
